# wayland-archived

./: .gitignore  .travis.yml  AUTHORS.md  CMakeLists.txt  CONTRIBUTORS.md  README.md  wayland.qbs
.travis/: build.sh  (+4 more)
declarative/compositor/: CMakeLists.txt  plugin.cpp  qmldir
declarative/server/: CMakeLists.txt  keyeventfilter.cpp  keyeventfilter.h  plugin.cpp  qmldir
declarative/server-private/: CMakeLists.txt  plugin.cpp
declarative/xwayland/: CMakeLists.txt  XWaylandWindowChrome.qml  plugin.cpp  qmldir  xwayland.cpp  xwayland.h  xwaylandmanager.cpp  xwaylandquickshellintegration.cpp  xwaylandquickshellintegration.h  xwaylandquickshellsurfaceitem.h  xwaylandserver.h  xwaylandshellsurface.cpp  xwaylandshellsurface.h
imports/server/: CMakeLists.txt  WindowChrome.qml  chromeitem.cpp  chromeitem.h  fpscounter.cpp  fpscounter.h  hotspot.cpp  hotspot.h  keyeventfilter.cpp  keyeventfilter.h  plugin.cpp  server.qbs
plugins/egldeviceintegration/brcm/: CMakeLists.txt  eglfsbrcmintegration.cpp  eglfsbrcmintegration.h  main.cpp
plugins/egldeviceintegration/mali/: CMakeLists.txt  eglfsmaliintegration.h  main.cpp  mali.json
plugins/egldeviceintegration/wayland/: CMakeLists.txt  eglfswaylandblitter.cpp  eglfswaylandblitter.h  eglfswaylandcontext.cpp  eglfswaylandcontext.h  eglfswaylandinput.cpp  eglfswaylandinput.h  eglfswaylandintegration.cpp  eglfswaylandintegration.h  eglfswaylandscreen.cpp  eglfswaylandscreen.h  eglfswaylandwindow.cpp  eglfswaylandwindow.h  main.cpp  stateguard.h
plugins/shellintegrations/fullscreen-shell/: CMakeLists.txt  fullscreen-shell.qbs  fullscreenshellintegration.cpp  fullscreenshellintegration.h  fullscreenshellsurface.cpp  fullscreenshellsurface.h  main.cpp
qpa/: CMakeLists.txt  main.cpp  qpa.qbs
src/: CMakeLists.txt  LiriWaylandConfig.cmake.in  deployment.qbs  libs.qbs
src/client/: CMakeLists.txt  LiriWaylandClientConfig.cmake.in  buffer.cpp  buffer.h  buffer_p.h  client.qbs  clientconnection.cpp  clientconnection.h  clientconnection_p.h  compositor.cpp  compositor.h  compositor_p.h  cursortheme.cpp  cursortheme.h  cursortheme_p.h  fullscreenshell.cpp  fullscreenshell.h  fullscreenshell_p.h  keyboard.cpp  keyboard.h  keyboard_p.h  liriwaylandclientglobal.h  output.cpp  output.h  output_p.h  outputconfiguration.cpp  outputconfiguration.h  outputconfiguration_p.h  outputmanagement.cpp  outputmanagement.h  outputmanagement_p.h  pointer.cpp  pointer.h  pointer_p.h  region.cpp  region.h  region_p.h  registry.cpp  registry.h  registry_p.h  (+23 more)
src/eglfs/: deviceintegration_p.cpp  egldeviceintegration.cpp  egldeviceintegration.h  eglfs.qbs  eglfscontext.cpp  eglfscontext.h  eglfscursor.cpp  eglfscursor.h  eglfsglobal.h  eglfsintegration.cpp  eglfsintegration.h  eglfsnativeinterface.h  eglfsoffscreenwindow.cpp  eglfsoffscreenwindow.h  eglfsscreen.cpp  eglfsscreen.h  eglfswindow.cpp  eglfswindow.h  lirieglfsglobal.h  logging.cpp  logging_p.h  vthandler.cpp
src/eglfsxkb/: eglfsxkb.h  eglfsxkb.qbs
src/imports/: imports.qbs
src/imports/server/: chromeitem.h  fpscounter.cpp  fpscounter.h  logging.cpp  logging_p.h  outputsettings.cpp  outputsettings.h  plugin.cpp  qmldir  quickoutput.cpp  quickoutput.h  screenmodel.cpp  screenmodel.h  server.qbs
src/imports/server-private/: plugin.cpp  qmldir  server-private.qbs
src/imports/xwayland/: plugin.cpp  sizehints.h  xcbatom.cpp  xcbatom.h  xcbatoms.cpp  xcbatoms.h  xcbcursors.cpp  xcbcursors.h  xcbproperties.cpp  xcbproperties.h  xcbresources.cpp  xcbresources.h  xcbwindow.cpp  xcbwrapper.cpp  xcbwrapper.h  xwayland.cpp  xwayland.h  xwayland.qbs  xwaylandmanager.cpp  xwaylandmanager.h  xwaylandquickshellintegration.cpp  xwaylandquickshellintegration.h  xwaylandquickshellsurfaceitem.cpp  xwaylandquickshellsurfaceitem.h  xwaylandserver.cpp  xwaylandserver.h  xwaylandshellsurface.cpp  xwaylandshellsurface.h
src/libinput/: libinput.qbs  libinputgesture.cpp  libinputgesture.h  libinputhandler.cpp  libinputhandler.h  libinputhandler_p.h  libinputkeyboard.cpp  libinputkeyboard.h  libinputkeyboard_p.h  libinputmanager_p.cpp  libinputmanager_p.h  libinputpointer.cpp  libinputpointer.h  libinputtouch.cpp  libinputtouch.h  lirilibinputglobal.h  logging.cpp  logging_p.h
src/logind/: lirilogindglobal.h  logging.cpp  logging_p.h  logind.cpp  logind.h  logind.qbs  vthandler.cpp  vthandler.h  vthandler_p.h
src/materialdecoration/: materialdecoration.cpp  materialdecoration.h  materialdecoration.qbs
src/platform/: CMakeLists.txt  LiriPlatformConfig.cmake.in  logging.cpp  logging.h
src/platform/deviceintegration/: deviceintegration_p.cpp  deviceintegration_p.h  egldeviceintegration.cpp  egldeviceintegration.h  eglfscontext.cpp  eglfscontext.h  eglfscursor.h  eglfsglobal.h  eglfsintegration.cpp  eglfsintegration.h  eglfsnativeinterface.cpp  eglfsnativeinterface.h  eglfsoffscreenwindow.cpp  eglfsoffscreenwindow.h  eglfsscreen.cpp  eglfsscreen.h  eglfswindow.cpp  eglfswindow.h  eglfsxkb.cpp  eglfsxkb.h
src/platform/libinput/: libinputgesture.cpp  libinputgesture.h  libinputhandler.cpp  libinputhandler.h  libinputhandler_p.h  libinputkeyboard.cpp  libinputkeyboard.h  libinputmanager_p.cpp  libinputmanager_p.h  libinputpointer.cpp  libinputpointer.h  libinputtouch.cpp  libinputtouch.h
src/platform/logind/: logind.cpp  logind.h  vthandler.cpp  vthandler.h
src/platform/udev/: udev.cpp  udev.h  udev_p.h  udevdevice.cpp  udevdevice.h  udevenumerate.cpp  udevenumerate.h  udevmonitor.cpp  udevmonitor.h
src/platformheaders/: lirieglfsfunctions.cpp  lirieglfsfunctions.h  liriplatformheadersglobal.h  platformheaders.qbs
src/plugins/: plugins.qbs
src/server/: CMakeLists.txt  GreenIslandServerConfig.cmake.in  GreenIslandServerMacros.cmake  LiriWaylandServerConfig.cmake.in  liriwaylandserverglobal.h  logging.cpp  logging_p.h  server.qbs  serverlogging_p.cpp  serverlogging_p.h
src/udev/: liriudevglobal.h  logging.cpp  logging_p.h  udev.cpp  udev.h  udev.qbs  udev_p.h  udevdevice.cpp  udevdevice.h  udevdevice_p.h  udevenumerate.cpp  udevenumerate.h  udevenumerate_p.h  udevmonitor.cpp  udevmonitor.h  udevmonitor_p.h
(+207 files in other folders)
